--- a/SpringBoot/BlogService/src/main/resources/application.properties
+++ b/SpringBoot/BlogService/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
+spring.datasource.username=root
+spring.datasource.password=Ming137137
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
